# ablanx

./: .gitignore  ATTRIBUTION.md  CITATION.cff  LICENSE  README.md  TECHNICAL_BRIEF.md  export_weights.py  golden_ablang2_pert_vh.npz  pyproject.toml  requirements.txt  test_agreement.py  test_shapes.py
.github/workflows/: publish.yml
ablang_jax/: __init__.py  model.py  precompute.py
